testing/fail-lbnf/388-empty-regex.cf
-- 2021-10-05 Issue #388, empty regular expression

token Empty [""]+ | [""] | (char - char);
